--- a/apps/artists/package.json
+++ b/apps/artists/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aptos-labs/wallet-adapter-core": "^2.5.1",
     "@aptos-labs/wallet-adapter-react": "^1.0.2",
+    "@panoraexchange/swap-sdk": "^1.0.4",
+    "@panoraexchange/widget-sdk": "1.0.0",
     "@perawallet/connect": "^1.3.4",
     "@pinata/sdk": "^2.1.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -24,9 +26,9 @@
     "next": "13.3.4",
     "npm": "^10.2.5",
     "petra-plugin-wallet-adapter": "^0.3.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1"
   },
